--- a/styles/main.css
+++ b/styles/main.css
@@ -154,7 +154,7 @@ width: 25%;
 float: left;
 margin-left: 30px;
 padding: 20px;
-opacity: 100%; !important!
+opacity: 100%; 
 box-shadow: 10px 10px 19px 0px rgba(0,0,0,0.75);
 }
 
