--- a/styles/main.css
+++ b/styles/main.css
@@ -167,3 +167,28 @@ box-shadow: 10px 10px 19px 0px rgba(0,0,0,0.75);
   margin-right: 0;
 }
 
+
+#question-values {
+  font-size: 15px;
+display: inline-block;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color:rgb(204, 186, 116);
+margin-left: 20px;
+margin-top: 20px;
+}
+
+.values {
+  font-size: 15px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color:rgb(211, 199, 153);
+ margin-left: 20px;
+ margin-top: 20px;
+ margin-right: 15%;
+}
+
+#kiacome {
+  font-size: 30px;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color:beige;
+margin-right: 30%;
+}
