--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ margin-bottom: 30px;
 p {
   font-size: 20px;
   padding-top: 20px;
-  margin-left: 20%;
+  margin-left: 25%;
   text-align: left;
   margin-right: 5%;
   color:rgb(65, 110, 152);
@@ -138,6 +138,12 @@ h3 a:hover {
   color:rgb(65, 110, 152);
 }
 
+#linkd {
+  font-size: 30px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color:rgb(65, 110, 152);
+}
+
 
 /*blog - learning plan*/
 
@@ -194,7 +200,7 @@ margin-right: 5%;
   display: inline-block;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color:rgb(65, 110, 152);
-  margin-left: 27%;
+  margin-left: 25%;
 }
 
 #image-c {
